[package]
name = "tuple_length"
version = "0.1.2"
authors = ["Karl Wulfert <pic16f877.ccs@emailn.de>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/pic16f877ccs/tuple_tool"
homepage = "https://github.com/pic16f877ccs/tuple_tool"
license = "GPL-3.0-or-later"
description = "Library for determining the length of a tuple."
keywords = ["trait", "no-std", "tuple-len", "tuple"]
categories = ["rust-patterns"]

[lib]
name = "tuple_length"

[dependencies]
tuple_macro = { version = "0.1.1", workspace = true, path = "tuple_macro" }

[features]
16 = ["tuple_macro/16"]
32 = ["tuple_macro/32"]
64 = ["tuple_macro/64"]


