[package]
name = "tuple_length"
version = "0.2.1"
authors = ["Karl Wulfert <pic16f877.ccs@emailn.de>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/pic16f877ccs/tuple_tool"
homepage = "https://github.com/pic16f877ccs/tuple_tool"
license = "GPL-3.0-or-later"
description = "Library for determining the length of a tuple."
keywords = ["trait", "no-std", "tuple-len", "tuple"]
categories = ["rust-patterns"]

[lib]
name = "tuple_length"

[dependencies]
tuple_macro = { version = "0.2.0", path = "../tuple_macro" }

[features]
tup_len_16 = ["tuple_macro/tup_len_16"]
tup_len_32 = ["tuple_macro/tup_len_32"]
tup_len_64 = ["tuple_macro/tup_len_64"]


