[package]
name = "tuple_macro"
authors.workspace = true
version = "0.1.1"
edition.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
discription.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "tuple_macro"
proc-macro = true

[dependencies]

[features]
16 = []
32 = []
64 = []
