[package]
name = "tuple_macro"
version = "0.1.1"
authors = ["Karl Wulfert <pic16f877.ccs@emailn.de>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/pic16f877ccs/tuple_tool"
homepage = "https://github.com/pic16f877ccs/tuple_tool"
license = "GPL-3.0-or-later"
description = "Library for determining the length of a tuple."
keywords = ["trait", "no-std", "tuple-len", "tuple"]
categories = ["rust-patterns"]

[lib]
name = "tuple_macro"
proc-macro = true

[dependencies]

[features]
16 = []
32 = []
64 = []
