[package]
name = "tuple_macro"
version = "0.2.2"
authors = ["Karl Wulfert <pic16f877.ccs@emailn.de>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/pic16f877ccs/tuple_tool"
homepage = "https://github.com/pic16f877ccs/tuple_tool"
license = "GPL-3.0-or-later"
description = "Library for determining the length of a tuple."
keywords = ["trait", "no-std", "tuple-len", "tuple"]
categories = ["rust-patterns"]

[lib]
name = "tuple_macro"
proc-macro = true

[dependencies]

[features]
tup_len_16 = []
tup_len_32 = []
tup_len_64 = []
from_tup_8 = []
from_tup_16 = []
from_tup_32 = []
from_tup_64 = []
